--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
   <!-- Section: services -->
-    <section id="service" class="home-section text-center bg-gray">
+    <section id="service" class="home-section text-center bg-dark">
 
     <div class="heading-about">
       <div class="container">
@@ -96,57 +96,19 @@
       </div>
     </div>
         <div class="row">
-            <div class="col-sm-3 col-md-3">
-        <div class="wow fadeInLeft" data-wow-delay="0.2s">
-                <div class="service-box">
-          <div class="service-icon">
-            <img src="img/icons/service-icon-1.png" alt="" />
-          </div>
-          <div class="service-desc">
-            <h5>Print</h5>
-            <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-          </div>
+            <div class="col-sm-4 col-md-4"></div>
+            <div class="col-sm-4 col-md-4">
+                <div class="wow fadeInLeft" data-wow-delay="0.2s">
+                    <div class="service-box">
+                          <div class="service-icon">
+                            <img src="img/icons/service-icon-1.png" alt="" />
+                          </div>
+                          <div class="service-desc">
+                            <h5>Print</h5>
+                            <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+                          </div>
+                    </div>
                 </div>
-        </div>
-            </div>
-      <div class="col-sm-3 col-md-3">
-        <div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-          <div class="service-icon">
-            <img src="img/icons/service-icon-2.png" alt="" />
-          </div>
-          <div class="service-desc">
-            <h5>Web Design</h5>
-            <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-          </div>
-                </div>
-        </div>
-            </div>
-      <div class="col-sm-3 col-md-3">
-        <div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-          <div class="service-icon">
-            <img src="img/icons/service-icon-3.png" alt="" />
-          </div>
-          <div class="service-desc">
-            <h5>Photography</h5>
-            <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-          </div>
-                </div>
-        </div>
-            </div>
-      <div class="col-sm-3 col-md-3">
-        <div class="wow fadeInRight" data-wow-delay="0.2s">
-                <div class="service-box">
-          <div class="service-icon">
-            <img src="img/icons/service-icon-4.png" alt="" />
-          </div>
-          <div class="service-desc">
-            <h5>Cloud System</h5>
-            <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-          </div>
-                </div>
-        </div>
             </div>
         </div>
     </div>
@@ -155,7 +117,7 @@
 
 
 	<!-- Section: about -->
-    <section id="about" class="home-section text-center">
+    <section id="about" class="home-section text-center bg-dark">
 		<div class="heading-about">
 			<div class="container">
 			<div class="row">
@@ -186,6 +148,7 @@
 					            <h5>Kelian Puppi</h5>
                       <p class="subtitle">Co-Founder & Game Developer</p>
                       <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
+                    
                   </div>
                 </div>
 				      </div>
@@ -208,13 +171,8 @@
 	<!-- /Section: about -->
 
 
-
-
-
-
-
 	<!-- Section: contact -->
-    <section id="contact" class="home-section text-center">
+    <section id="contact" class="home-section text-center footer-tweak bg-dark">
 		<div class="heading-contact">
 			<div class="container">
 			<div class="row">
@@ -223,7 +181,6 @@
 					<div class="section-heading">
 					<h2>Get in touch</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
-
 					</div>
 					</div>
 				</div>
@@ -237,9 +194,8 @@
 				<hr class="marginbot-50">
 			</div>
 		</div>
-    <div class="row">
+    <div class="row boxed-grey">
         <div class="col-lg-8">
-            <div class="boxed-grey">
                 <form id="contact-form">
                 <div class="row">
                     <div class="col-md-6">
@@ -280,7 +236,6 @@
                     </div>
                 </div>
                 </form>
-            </div>
         </div>
 
 		<div class="col-lg-4">
@@ -314,25 +269,26 @@
     </div>
 
 		</div>
-	</section>
-	<!-- /Section: contact -->
 
-	<footer>
     <div class="container">
-      <div class="row">
+        
+      <div class="row custom-footer">
         <div class="col-md-12 col-lg-12">
           <div class="wow shake" data-wow-delay="0.4s">
-          <div class="page-scroll marginbot-30">
-            <a href="#intro" id="totop" class="btn btn-circle">
-              <i class="fa fa-angle-double-up animated"></i>
-            </a>
-          </div>
+            <div class="page-scroll marginbot-30">
+                <a href="#intro" id="totop" class="btn btn-circle">
+                  <i class="fa fa-angle-double-up animated"></i>
+                </a>
+            </div>
           </div>
           <p>&copy;Copyright 2014 - Squad. All rights reserved.</p>
         </div>
       </div>
     </div>
-	</footer>
+    <img id="footer-img" src="/img/ft1.jpg">    
+	</section>
+	<!-- /Section: contact -->
+
 
   <!-- Core JavaScript Files -->
   <script src="js/jquery.min.js"></script>
