--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <title>Implosion Games - The world as you know it</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/animate.css" rel="stylesheet" />
+    <link href="css/animate.css" rel="stylesheet" />
 
     <!-- Squad theme CSS -->
-    <link href="/css/style.css" rel="stylesheet">
-    <link href="/color/default.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="color/default.css" rel="stylesheet">
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-	<!-- Preloader -->
-	<div id="preloader">
-	  <div id="load"></div>
-	</div>
+  <!-- Preloader -->
+  <div id="preloader">
+    <div id="load"></div>
+  </div>
 
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
@@ -55,7 +55,7 @@
         <!-- /.container -->
     </nav>
 
-	<!-- Section: intro -->
+  <!-- Section: intro -->
     <section id="intro" class="intro">
 
     <div class="slogan">
@@ -66,9 +66,9 @@
       <a href="#service" class="btn btn-circle">
         <i class="fa fa-angle-double-down animated"></i>
       </a>
-  	</div>
+    </div>
     </section>
-	<!-- /Section: intro -->
+  <!-- /Section: intro -->
 
 
   <!-- Section: services -->
@@ -116,46 +116,46 @@
   <!-- /Section: services -->
 
 
-	<!-- Section: about -->
+  <!-- Section: about -->
     <section id="about" class="home-section text-center bg-dark">
-		<div class="heading-about">
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2">
-					<div class="wow bounceInDown" data-wow-delay="0.4s">
+    <div class="heading-about">
+      <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="wow bounceInDown" data-wow-delay="0.4s">
             <div class="section-heading">
               <h2>About us</h2>
               <i class="fa fa-2x fa-angle-down"></i>
             </div>
-					</div>
-				</div>
-			</div>
-			</div>
-		</div>
-		<div class="container">
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="container">
 
-		<div class="row">
-			<div class="col-lg-2 col-lg-offset-5">
-				<hr class="marginbot-50">
-			</div>
-		</div>
+    <div class="row">
+      <div class="col-lg-2 col-lg-offset-5">
+        <hr class="marginbot-50">
+      </div>
+    </div>
         <div class="row">
             <div class="col-xs-6 col-sm-3 col-md-3"></div>
             <div class="col-xs-6 col-sm-3 col-md-3">
-				      <div class="wow bounceInUp" data-wow-delay="0.2s">
-                <div class="team boxed-grey">
+              <div class="wow bounceInUp" data-wow-delay="0.2s">
+                <div class="team about-item">
                   <div class="inner">
-					            <h5>Kelian Puppi</h5>
+                      <h5>Kelian Puppi</h5>
                       <p class="subtitle">Co-Founder & Game Developer</p>
                       <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
                     
                   </div>
                 </div>
-				      </div>
+              </div>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-3">
               <div class="wow bounceInUp" data-wow-delay="0.2s">
-                <div class="team boxed-grey">
+                <div class="team about-item">
                   <div class="inner">
                       <h5>Daniel Waksman</h5>
                       <p class="subtitle">Co-Founder & Game Developer</p>
@@ -166,35 +166,35 @@
             </div>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-3"></div>
-		</div>
-	</section>
-	<!-- /Section: about -->
+    </div>
+  </section>
+  <!-- /Section: about -->
 
 
-	<!-- Section: contact -->
+  <!-- Section: contact -->
     <section id="contact" class="home-section text-center footer-tweak bg-dark">
-		<div class="heading-contact">
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2">
-					<div class="wow bounceInDown" data-wow-delay="0.4s">
-					<div class="section-heading">
-					<h2>Get in touch</h2>
-					<i class="fa fa-2x fa-angle-down"></i>
-					</div>
-					</div>
-				</div>
-			</div>
-			</div>
-		</div>
-		<div class="container">
+    <div class="heading-contact">
+      <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="wow bounceInDown" data-wow-delay="0.4s">
+          <div class="section-heading">
+          <h2>Get in touch</h2>
+          <i class="fa fa-2x fa-angle-down"></i>
+          </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="container">
 
-		<div class="row">
-			<div class="col-lg-2 col-lg-offset-5">
-				<hr class="marginbot-50">
-			</div>
-		</div>
-    <div class="row boxed-grey">
+    <div class="row">
+      <div class="col-lg-2 col-lg-offset-5">
+        <hr class="marginbot-50">
+      </div>
+    </div>
+    <div class="row contact-container">
         <div class="col-lg-8">
                 <form id="contact-form">
                 <div class="row">
@@ -238,37 +238,37 @@
                 </form>
         </div>
 
-		<div class="col-lg-4">
-			<div class="widget-contact">
-				<h5>Main Office</h5>
+    <div class="col-lg-4">
+      <div class="widget-contact">
+        <h5>Main Office</h5>
 
-				<address>
-				  <strong>Squas Design, Inc.</strong><br>
-				  Tower 795 Folsom Ave, Beautiful Suite 600<br>
-				  San Francisco, CA 94107<br>
-				  <abbr title="Phone">P:</abbr> (123) 456-7890
-				</address>
+        <address>
+          <strong>Squas Design, Inc.</strong><br>
+          Tower 795 Folsom Ave, Beautiful Suite 600<br>
+          San Francisco, CA 94107<br>
+          <abbr title="Phone">P:</abbr> (123) 456-7890
+        </address>
 
-				<address>
-				  <strong>Email</strong><br>
-				  <a href="mailto:#">email.name@example.com</a>
-				</address>
+        <address>
+          <strong>Email</strong><br>
+          <a href="mailto:#">email.name@example.com</a>
+        </address>
 
-				<address>
-				  <strong>We're on social networks</strong><br>
-         	<ul class="company-social">
+        <address>
+          <strong>We're on social networks</strong><br>
+          <ul class="company-social">
               <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
               <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
               <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
           </ul>
-				</address>
+        </address>
 
-			</div>
-		</div>
+      </div>
+    </div>
     </div>
 
-		</div>
+    </div>
 
     <div class="container">
         
@@ -285,9 +285,9 @@
         </div>
       </div>
     </div>
-    <img id="footer-img" src="/img/ft1.jpg">    
-	</section>
-	<!-- /Section: contact -->
+    <img id="footer-img" src="img/ft1.jpg">    
+  </section>
+  <!-- /Section: contact -->
 
 
   <!-- Core JavaScript Files -->
