--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h4>We make games that are fun to play</h4>
     </div>
         
-    <div class="row offset-bottom">
+    <div class="row offset-bottom offset-top">
         <img class="col-xs-10 col-md-6 col-lg-4 col-md-offset-3 col-xs-offset-1 col-lg-offset-4" src="/img/logo.png">
     </div>    
         
@@ -260,8 +260,8 @@
         <address>
           <strong>We're on social networks</strong><br>
           <ul class="company-social">
-              <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-              <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li class="social-facebook"><a href="https://www.facebook.com/pyromancergames" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li class="social-twitter"><a href="https://twitter.com/pyromancergames" target="_blank"><i class="fa fa-twitter"></i></a></li>
           </ul>
         </address>
 
